--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,4 +2,24 @@ spring:
   data:
     mongodb:
       uri: mongodb://root:password@localhost:27017/cbf?authSource=admin
-      database: cbf
+  kafka:
+    client-id: cbf-client-id
+    topicsName: topic1,topic2
+    consumer:
+      bootstrap-servers: localhost:9092
+      properties:
+        security.protocol: PLAINTEXT
+        sasl.mechanism:
+        sasl.jaas.config:
+        schema.registry.url:
+    producer:
+      bootstrap-servers: localhost:9092
+      properties:
+        security.protocol: PLAINTEXT
+        sasl.mechanism:
+        sasl.jaas.config:
+        schema.registry.url:
+    redis:
+      host: localhost
+      port: 6379
+      ttl: 30000
