--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,10 +14,17 @@ spring:
         sasl.jaas.config:
         schema.registry.url:
 
-    redis:
-      host: localhost
-      port: 6379
-      ttl: 30000
+  redis:
+    host: localhost
+    port: 6379
+    ttl: 300000
+    jedis:
+      pool:
+        max-idle: 7
+        min-idle: 2
+        max-active: 7
+        max-wait: -1ms
+
 auto:
   create:
     topics:
